--- a/package.json
+++ b/package.json
@@ -8,22 +8,43 @@
     "dev": "remix dev --manual",
     "lint": "eslint --ignore-path .gitignore --cache --cache-location ./node_modules/.cache/eslint .",
     "start": "remix-serve ./build/index.js",
-    "typecheck": "tsc"
+    "typecheck": "tsc",
+    "routes:gen": "routes-gen -d @routes-gen/remix",
+    "db:migrations": "drizzle-kit generate:sqlite --out ./app/db/migrations --schema ./app/db/schema.server.ts"
   },
   "dependencies": {
+    "@prisma/client": "^5.8.1",
     "@remix-run/css-bundle": "^2.5.1",
     "@remix-run/node": "^2.5.1",
     "@remix-run/react": "^2.5.1",
     "@remix-run/serve": "^2.5.1",
+    "@remix-validated-form/with-zod": "^2.0.7",
+    "@routes-gen/remix": "^0.3.7",
+    "argon2": "^0.31.2",
+    "better-sqlite3": "^9.3.0",
+    "domain-functions": "^2.5.3",
+    "drizzle-orm": "^0.29.3",
+    "flowbite": "^2.2.1",
     "isbot": "^4.1.0",
+    "match-sorter": "^6.3.3",
+    "prisma": "^5.8.1",
     "react": "^18.2.0",
-    "react-dom": "^18.2.0"
+    "react-dom": "^18.2.0",
+    "remix-auth": "^3.6.0",
+    "remix-auth-form": "^1.4.0",
+    "remix-validated-form": "^5.1.5",
+    "routes-gen": "^0.6.1",
+    "sort-by": "^1.2.0",
+    "zod": "^3.22.4"
   },
   "devDependencies": {
     "@remix-run/dev": "^2.5.1",
+    "@types/better-sqlite3": "^7.6.9",
     "@types/react": "^18.2.20",
     "@types/react-dom": "^18.2.7",
+    "@types/sort-by": "^1.2.3",
     "@typescript-eslint/eslint-plugin": "^6.7.4",
+    "drizzle-kit": "^0.20.13",
     "eslint": "^8.38.0",
     "eslint-config-prettier": "^9.0.0",
     "eslint-import-resolver-typescript": "^3.6.1",
@@ -31,6 +52,7 @@
     "eslint-plugin-jsx-a11y": "^6.7.1",
     "eslint-plugin-react": "^7.33.2",
     "eslint-plugin-react-hooks": "^4.6.0",
+    "tailwindcss": "^3.4.1",
     "typescript": "^5.1.6"
   },
   "engines": {
